# PicoInterfaceForPowerSupply10A_Uppsala

./: CMakeLists.txt  README.md  run-compilation-time-binary.sh  run-doxy.sh  run-git.sh
calculations/: calculations.ods
documentation/: .gitignore  Doxyfile  Opis_interfejsu_do_zasilaczy_10A.odt  Opis_interfejsu_do_zasilaczy_10A_(Uppsala).odt  ToDo.txt  kwadrupole-linia-pionowa-v1.1.odt  kwadrupole-linia-pionowa.odt  pomiary_2025_10_08.txt
source/: adc_inputs.c  adc_inputs.h  compilation_time.c  compilation_time.h  config.h  debugging.c  debugging.h  i2c_outputs.c  i2c_outputs.h  main_timer.c  main_timer.h  pcf8574_outputs.c  pcf8574_outputs.h  power_source.c  psu_talks.c  psu_talks.h  pwm_output.c  pwm_output.h  ring_spsc.h  rstl_protocol.c  rstl_protocol.h  serial_transmission.c  serial_transmission.h  uart_talks.c  uart_talks.h  writing_to_dac.c  writing_to_dac.h
tests/: Notatka_2025_10_24.txt  Notatka_2025_10_27.txt  commands_hexadecimal_encoded.txt  kwadrupole-linia-pionowa.sh  run-RSTL-master.sh  run-remote-terminal1.sh  run-terminal1.sh  run-terminal2.sh  test3.ods  test4.ods
